<resources>
    <string name="echo_randomness_color" translatable="false">#c9000a</string>
    <string name="app_name" translatable="false">ArmySim</string>
    <string name="armyName">Name:</string>
    <string name="initialRowCount">Rows:</string>
    <string name="initialRowCount_default" translatable="false">1</string>
    <string name="create">Create</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">"The following armies are going to be DELETED:"</string>
    <string name="delete_confirm_all">"ALL armies are going to be DELETED!"</string>
    <string name="error">Error</string>
    <string name="editing">"Editing %s"</string>
    <string name="editMode">" (Edit Mode)"</string>
    <string name="row">"Row"</string>
    <string name="rows">"Rows"</string>
    <string name="indexOutOfRange">"Can't move to Row "</string>
    <string name="button_move_up">Up</string>
    <string name="button_move_down">Down</string>
    <string name="button_move_to">Move to</string>
    <string name="namelessArmy">Nameless Army</string>
    <string name="toast_saved">"%s saved"</string>
    <string name="toast_save_failed">"%s: Saving FAILED!"</string>
    <string name="toast_too_much_data">"The resulting text is too big! Try sharing less armies at once."</string>
    <string name="toast_renamed">"%s renamed"</string>
    <string name="toast_rename_failed">"%s: Renaming FAILED!"</string>
    <string name="toast_copied" formatted="false">"%s copied to %s"</string>
    <string name="toast_copy_failed">"%s: Copying FAILED!"</string>
    <string name="button_saveArmy">Save</string>
    <string name="button_saveArmy_and_exit">"Save &amp; Exit"</string>
    <string name="button_newSimulation">"Fight!"</string>
    <string name="button_runSim">Run</string>
    <string name="button_addRow">New Row</string>
    <string name="attribute_attack">Attack:</string>
    <string name="attribute_lives">LP:</string>
    <string name="attribute_roundsAfterDeath">Rounds to survive after Death:</string>
    <string name="attribute_attackSpeed">Attack speed:</string>
    <string name="attribute_defense">Defense:</string>
    <string name="attribute_reach">Reach:</string>
    <string name="attribute_attackWeakest">Attack weakest Row</string>
    <string name="attribute_distanceDamage">Take distance Damage</string>
    <string name="attribute_distanceFighter">Distance Fighter</string>
    <string name="sim_iterations_text">Iterations:</string>
    <string name="sim_iterations_default" translatable="false">1</string>
    <string name="sim_randomness">Randomness</string>
    <string name="randomness_on">Randomness activated.</string>
    <string name="randomness_off">Randomness deactivated.</string>
    <!--string name="echo_tie">\t\t\t\tTie \t(%d)</string-->
    <string name="echo_tie">Tie (%d)</string>
    <string name="echo_ties">"Ties: "</string>
    <string name="echo_total">"Total: "</string>
    <string name="echo_noArmies">"No Armies checked."</string>
    <!--string name="echo_winInRound_singular" formatted="false">"%s \t\twins in round %d with 1 row left. \t\t(%d)"</string>
    <string name="echo_winInRound_plural" formatted="false">"%s \t\twins in round %d with %d rows left. \t(%d)"</string-->
    <string name="echo_winInRound_singular" formatted="false">"%s wins in round %d with 1 row left. (%d)"</string>
    <string name="echo_winInRound_plural" formatted="false">"%s wins in round %d with %d rows left. (%d)"</string>
    <string name="echo_duration">"Duration: %dms"</string>
    <string name="echo_cancelled_duration">"Cancelled: Duration: %dms"</string>
    <string name="error_could_not_get_army">"Error: Could not get this Army!"</string>
    <string name="export">Export</string>
    <string name="checkAll">"Check All"</string>
    <string name="invert">Invert</string>
    <string name="export_done">"Export done"</string>
    <string name="export_not_writable">"Storage NOT writable!"</string>
    <string name="export_could_not_save">"%s could NOT be saved! (Write Error)"</string>
    <string name="share">Share</string>
    <string name="copied_to_clipboard">Selected Armies copied to clipboard</string>
    <string name="text">Text</string>
    <string name="editor">Editor</string>
    <string name="name">Name</string>
    <string name="toast_permissiondenied_storage">Storage permission required to export</string>
    <string name="checkbox_keep_old_army">Keep original army</string>
    <string name="renaming">"Renaming %s"</string>
</resources>
