<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_armylist_runSim"
        android:icon="@android:drawable/ic_media_play"
        android:showAsAction="always"
        android:title="@string/button_runSim" />
    <item
        android:id="@+id/menu_armylist_checkAll"
        android:icon="@android:drawable/checkbox_on_background"
        android:showAsAction="always"
        android:title="@string/checkAll" />
    <item
        android:id="@+id/menu_armylist_invert"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="always"
        android:title="@string/invert" />
    <item
        android:id="@+id/menu_armylist_create"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/create" />
    <item
        android:id="@+id/menu_armylist_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete" />
    <item
        android:id="@+id/menu_armylist_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share" />
    <item
        android:id="@+id/menu_armylist_export"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/export" />
    <item
        android:id="@+id/menu_armylist_copy"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/copy" />
</menu>