<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.sebi.armysim.MainActivity">

    <ListView
        android:id="@+id/lv_armies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_main_settings"
        android:layout_alignParentTop="true"></ListView>

    <LinearLayout
        android:id="@+id/ll_main_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_default_randomness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveRandomness"
                android:text="@string/sim_randomness" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armyName" />

            <EditText
                android:id="@+id/editText_create_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initialRowCount" />

            <EditText
                android:id="@+id/editText_create_rowCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:hint="@string/initialRowCount_default"
                android:inputType="number" />

            <Button
                android:id="@+id/button_setupArmy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="createArmy"
                android:text="@string/create" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="deleteSelectedArmies"
                android:text="@string/delete" />

            <Button
                android:id="@+id/button_newSimulation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="setupSimulation"
                android:text="@string/button_newSimulation" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>